# dnf_workspace

./: .gitignore  .gitmodules
dnf_decompile/source/: CMakeLists.txt  compare_df_community_functions.py
dnf_decompile/source/ChannelOld/DNFChannelBridge/: Authenticator.cpp  Authenticator.h  ChannelService.cpp  CheckThread.cpp  CheckThread.h  CommandLineParser.cpp  CommandLineParser.h  DBMgr.cpp  DBMgr.h  DNFChannelBridge.cpp  DNFChannelBridge.h  Exception.cpp  Globals.cpp  Globals.h  LinuxService.cpp  PIDHelper.cpp  Script.cpp  Script.h  ScriptData.cpp  ScriptRawData.cpp  ScriptRawData.h  ScriptThread.cpp  ScriptThread.h  Service.cpp  Service.h  SignalHandler.cpp  Socket.cpp  Socket.h  SocketSystem.cpp  SocketSystem.h  System.cpp  TCPAcceptThread.cpp  TCPHandler.cpp  TCPHandler.h  TCPThread.cpp  TCPUser.cpp  TCPUser.h  Thread.cpp  ThreadLock.cpp  Token.cpp  (+6 more)
dnf_decompile/source/ChannelOld/DNFChannelBridge/DNFServerCommon/: DNFFunctionLib.cpp  DNFFunctionLib.h
dnf_decompile/source/ChannelOld/DNFChannelServer/: ChannelService.cpp  ChannelService.h  CheckThread.cpp  CommandLineParser.cpp  DNFChannelServer.cpp  DNFChannelServer.h  Exception.cpp  Globals.cpp  LinuxService.cpp  Method.cpp  PIDHelper.cpp  PIDHelper.h  Reactor.cpp  Reactor.h  Rijndael.cpp  Rijndael.h  SHA.cpp  Script.cpp  ScriptData.cpp  ScriptData.h  ScriptRawData.cpp  Service.cpp  SignalHandler.cpp  SignalHandler.h  Socket.cpp  SocketSystem.cpp  System.cpp  TCPAcceptThread.cpp  TCPAcceptThread.h  TCPHandler.cpp  TCPThread.cpp  TCPThread.h  TCPUser.cpp  Thread.cpp  ThreadLock.cpp  Token.cpp  Token.h  UDPHandler.cpp  UDPThread.cpp  UDPThread.h  (+5 more)
dnf_decompile/source/Community/src/: AbstractSocket.cpp  AbstractSocket.h  ArchiveLog.cpp  ArchiveLog.h  BuddyManager.cpp  BuddyManager.h  ConfigFileReader.cpp  ConfigFileReader.h  CoreDump.cpp  CoreDump.h  DateTime.cpp  DateTime.h  Epoll.cpp  Epoll.h  FindBuddy.cpp  FindBuddy.h  FindUser.cpp  FindUser.h  ISessionManager.cpp  ISessionManager.h  NetworkSession.cpp  NetworkSession.h  PacketDispatcher.cpp  PacketDispatcher.h  ProcessManager.cpp  ProcessManager.h  SessionManager.cpp  SessionManager.h  SessionProxy.cpp  SessionProxy.h  User.cpp  User.h  UserManager.cpp  UserManager.h  global.cpp  global.h  main.cpp
dnf_decompile/source/DNFServer/GameServer/ServerLab/AppCommon/AuctionCommon/: ServiceError.cpp  ServiceError.h
dnf_decompile/source/DNFServer/GameServer/ServerLab/Auction/AuctionServer/GameData/: Character.cpp  Character.h  DNFFunctionLibWrapper.cpp  DNFFunctionLibWrapper.h  GameDataPool.cpp  GameDataPool.h  ServerLibrary2.0.cpp  ServerLibrary2.0.h  StatisticsCollector.cpp  StatisticsCollector.h  Zone.cpp  Zone.h  version.cpp  version.h
dnf_decompile/source/DNFServer/GameServer/ServerLab/Auction/AuctionServer/auction_source/: HandlerFor_DB_.cpp  HandlerFor_DB_.h  HandlerFor_GA_.cpp  HandlerFor_GA_.h  HandlerFor_GP_JPN.cpp  HandlerFor_GP_JPN.h  HandlerFor_TE_.cpp  HandlerFor_TE_.h  InterHandler.cpp  (+3 more)
dnf_decompile/source/DNFServer/GameServer/ServerLab/ServerLib/basic_source/: DataPool.cpp  DataPool.h  DefGlobal.cpp  DefGlobal.h  Exception.cpp  Exception.h  LinuxService.cpp  LinuxService.h  Method.cpp  Method.h  RecvBuffer.cpp  RecvBuffer.h  SHA.cpp  SHA.h  Script.cpp  Socket.cpp  SocketSystem.cpp  System.cpp  System.h  TCPUser.cpp  TEA.cpp  TEA.h  Thread.cpp  Thread.h  ThreadLock.cpp  ThreadLock.h  Token.cpp  TraceLog.cpp  TraceLog.h
dnf_decompile/source/DNFServer/GameServer/ServerLab/ServerLib/common_source/: CommonDataPool.cpp  CommonDataPool.h  DBConnection.cpp  DBConnection.h  DBDispatcher.cpp  DBDispatcher.h  IArea.cpp  IArea.h  IHandler.cpp  IHandler.h  InterDispatcher.cpp  InterDispatcher.h  LogSendThread.cpp  LogSendThread.h  NSLDBThread.cpp  NSLDBThread.h  ServiceError.cpp  ServiceFactory.cpp  ServiceFactory.h  TActiveConnect.cpp  TActiveConnect.h  TCPDispatcher.cpp  TCPDispatcher.h  TCPSendThread.cpp  TCPSendThread.h  TCPThread.cpp  TimeManager.cpp  TimeManager.h  TimerThread.cpp  TimerThread.h  WorkThread.cpp  WorkThread.h
dnf_decompile/source/DNFServer/ServerCommon/: DNFFileLog.cpp  DNFFileLog.h  DNFFunctionLib.cpp  ServerXml.cpp  ServerXml.h
dnf_decompile/source/DNFServer/StunServer/stun_server/: global_func.cpp  global_func.h  server.cpp  server.h  stun.cpp  stun.h  udp.cpp  udp.h
dnf_decompile/source/DNFShared/GameScript/: RDARScriptAvatarColorInfo.cpp  RDARScriptAvatarColorInfo.h  RDARScriptItemInfo.cpp  RDARScriptItemInfo.h
dnf_decompile/source/placeholder/: df_coserver_r.cpp  df_guild_r.cpp  df_manager_r.cpp  df_monitor_r.cpp  df_relay_r.cpp  df_statics_r.cpp
dnf_decompile/source/shared/common/include/: ReverseEngineerLib.h
dnf_decompile/source/shared/packet/include/: PacketHeader.h  Packet_Abnormal_Exit_Statistic.h  Packet_Add_Guild_Fund.h  Packet_Approve_Join_Guild.h  Packet_Assert_Manager_Info.h  Packet_Avater_Disjoint_Statistic.h  Packet_Blood_dungeon_statistic.h  Packet_Broadcast_Msg.h  Packet_Change_Char_Name.h  Packet_Change_Guild_Name.h  Packet_ChannelType.h  Packet_Circulation_Statistic.h  Packet_Client_Spec_Statistic.h  Packet_CollectItems.h  Packet_CollectItemsGm.h  Packet_Community_Login.h  Packet_Community_Logout.h  Packet_Cube_Statistic.h  Packet_CutOff_UDP_Reply_UserInfo.h  Packet_DeathTower_Statistic_Playdata_Job.h  Packet_DeathTower_Statistic_Playdata_Party.h  Packet_DeathTower_Statistic_Value.h  Packet_Delete_PvP_Buddy.h  Packet_Delete_To_BlackList.h  Packet_Disable_User_OneToOneChat_Police.h  Packet_DoubleCheck_UDP_Login.h  Packet_DoubleCheck_UDP_Logout.h  Packet_Double_Check_Server_UDP_HeartBeat.h  Packet_Dungeon_Statistic_Party.h  Packet_Dungeon_Statistic_Party_Charac.h  Packet_Dungeon_Statistic_Party_Job.h  Packet_Emblem_Create_Statistic.h  Packet_Event_UpgradeJar_Output_Statistic_GTS.h  Packet_Exchange_Server_Info.h  Packet_Fair_Pvp_Ping_Statistic.h  Packet_Fatigue_Battery_Money_Statistic.h  Packet_File_Statistic.h  Packet_Forbid_Chat_By_Monitor.h  Packet_Frame_Lag_Statistic_Add.h  Packet_GM_PowerWar_End.h  (+141 more)
dnf_decompile/source/shared/packet/src/: PacketHeader.cpp  STGameUserInfo.cpp  STPvPBuddyDBInfo.cpp
(+21 files in other folders)
